# Load-Balancer

./: .env  Cargo.toml  README.md  crate.toml
src/: main.rs  schema.prisma
src/functions/: Actix_web_module.rs  cache.rs  data.rs  discord.rs  load-balancer.rs
