[package]
name = "load-balancer"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
serenity = "0.10"
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8"
r2d2_postgres = "0.5"
dotenv = "0.15"
prisma = "0.10"
# Add any other dependencies you need